assets/custom.css
@reference './app.css';

/* Place custom css here. */

:root {
  --w: calc(800px + 32px * 2);
}

.microblog_conversation {
    margin-top: 50px;
    padding-top: 20px;
    border-top-width: 1px;
    border-top-style: solid;
  }

  .microblog_post {
    padding-top: 20px;
    padding-bottom: 20px;
  }

  .microblog_user {
    margin-bottom: 10px;
  }

  .microblog_avatar {
    border-radius: 5px;
    vertical-align: middle;
    float: left;
    display: inline;
    margin: 0 10px 0 0;
    width: 30px;
    height: 30px;
    max-width: 30px !important;
  }

  .microblog_time {
    font-size: 1.6rem;
    opacity: 60%;
  }

  .microblog_time a {
    opacity: 60%;
    text-decoration: none;
  }

  .microblog_text a {
    padding-bottom: 0.2rem;
    font-weight: 500;
  }

  .microblog_text p {
    margin-bottom: 5px;
  }

  .archive-categories {
  padding-bottom: 15px; 
  margin-bottom: 30px;
  display: inline;
  }

  .archive-category-name {
  margin: 0 10px 0 0;
  color: inherit;
  font-weight: 700;
  text-decoration: underline;
  }

  .post-tags.post-reply {
    margin-top: 3.5rem;
  }

  a.conversation-on-mb,
  a.reply-by-email {
    margin-right:10px;
  }

  hr.post-separator {
    border: none;
    text-align: center;
    height: auto;
    overflow: visible;
    color: inherit;
  }

  /* This is for the nice arrow separator between posts */

  hr.post-separator::before {
    content: "\21DC \2015 \2015 \21DD";
    display: block;
    font-size: 1.5rem;
    letter-spacing: 0.2em;
  }

  #recently_read article {
    font-size: 0.9rem;
  }

  #recently_read a {
    text-decoration: underline;
  }

  .all_borders {
	border-width:1px; 
	color: var(--black); 
	border-style:solid; 
	padding: 10px;
	border-radius: 10px; 
}


/* Responsive video embeds */
article iframe {
  max-width: 100%;
}

/* Custom fonts */

@font-face {
font-family: lato;
src: url('fonts/Lato-Regular.woff2') format('woff2');
}

@font-face {
font-family: lato;
src: url('fonts/Lato-Bold.woff2') format('woff2');
font-weight: bold;
}

@font-face {
font-family: lato;
src: url('fonts/Lato-Italic.woff2') format('woff2');
font-style: italic;
}

@font-face {
font-family: lato;
src: url('fonts/Lato-BoldItalic.woff2') format('woff2');
font-weight: bold;
font-style: italic;
}

@font-face {
font-family: roboto_slab;
src: url('fonts/RobotoSlab-Regular.woff2') format('woff2');
}

@font-face {
font-family: roboto_slab;
src: url('fonts/RobotoSlab-Bold.woff2') format('woff2');
font-weight: bold;
}


body { font-family: lato, sans-serif; }
h1, h2, h3, h4, h5, h6 { font-family: roboto_slab, serif; }

/*
This changes the site title font it seems
*/

header > div > a {
  font-family: roboto_slab, serif;
}

